# verify-server

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile-dev  README.md  cog.toml  deny.toml  docker-compose.yml  justfile  package.json
.github/: codeowners
.github/workflows/: cd.yml  ci.yml  ci_terraform.yml  debug_validate.yml  deploy.yml  dispatch_deploy.yml  dispatch_publish.yml  dispatch_validate.yml  event_intake.yml  event_pr.yml  event_release.yml  release.yml  sub-cd.yml  sub-validate.yml
integration/: integration.test.ts
ops/: docker-compose.ot.yml  docker-compose.storage.yml
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/attestation_store/: cf_kv.rs  migration.rs  mod.rs  redis.rs
src/cache/: mod.rs  redis.rs
src/event_sink/: mod.rs  s3.rs
src/handlers/: attestation.rs  enclave.rs  health.rs  mod.rs
src/http_server/: attestation.rs  health.rs  index_js.rs  metrics.rs  mod.rs
src/project_registry/: cloud.rs  mod.rs
src/project_registry/cache/: mod.rs  redis.rs
src/scam_guard/: data_api.rs  mod.rs
src/stores/: attestation.rs  mod.rs
src/util/: redis.rs
terraform/: .terraform.lock.hcl  README.md  backend.tf  context.tf  main.tf  res_dns.tf  res_ecs.tf  res_monitoring.tf  terraform.tf  variables.tf
terraform/ecs/: analytics.tf  cluster.tf  cluster_iam.tf  main.tf  variables.tf
terraform/monitoring/: dashboard.jsonnet  grafana-dashboard.json.tpl  main.tf  terraform.tf  variables.tf
terraform/monitoring/panels/: panels.libsonnet
terraform/monitoring/panels/ecs/: availability.libsonnet  cpu.libsonnet  memory.libsonnet
terraform/monitoring/panels/http/: average_latency.libsonnet  latency_quantiles.libsonnet  request_response.libsonnet  response_status.libsonnet
terraform/monitoring/panels/redis/: cpu.libsonnet  memory.libsonnet  reads.libsonnet  writes.libsonnet
terraform/monitoring/panels/registry/: cache_read.libsonnet  cache_write.libsonnet  requests.libsonnet
terraform/redis/: main.tf  outputs.tf  variables.tf
terraform/vars/: dev.tfvars  prod.tfvars  staging.tfvars
tests/: integration.rs
tests/context/: server.rs
