[package]
name = "bouncer"
version = "0.26.0"
edition = "2021"
authors = [
    "Derek <derek@walletconnect.com>"
]
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }

# Http
axum = { version = "0.6", features = ["json"] }
jsonwebtoken = "8"
tower = "0.4"
tower-http = { version = "0.3", features = ["cors", "trace"] }
hyper = "0.14"

# Infra
deadpool-redis = "0.10"
cerberus = { git = "https://github.com/WalletConnect/cerberus.git", tag = "v0.9.0" }

# O11y
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
metrics = "0.20"
axum-prometheus = "0.3"
prometheus = "0.13"

# Serialisation
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.0"

# Misc
arrayvec = { version = "0.7", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
build-info = ">=0.0.30"
derive_more = "0.99"
envy = "0.4"
futures = "0.3"
log = "0.4"
thiserror = "1.0"
tap = "1.0"

[build-dependencies]
build-info-build = ">=0.0.30"
