[package]
name = "bouncer"
version = "0.34.4"
edition = "2021"
authors = [
    "Derek <derek@walletconnect.com>"
]
build = "build.rs"

[dependencies]
wc = { git = "https://github.com/WalletConnect/utils-rs.git", tag = "v0.11.1", features = ["geoip", "geoblock", "analytics", "future", "metrics"] }

tokio = { version = "1", features = ["full"] }

# Http
axum = { version = "0.7.5", features = ["json"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-client-ip = "0.5.1"
jsonwebtoken = "8"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
hyper = "1.2.0"
reqwest = { version = "0.12.2", features = ["json"] }

# Infra
aws-config = "1.1.9"
aws-sdk-s3 = "1.21.0"
deadpool-redis = "0.10"
cerberus = { git = "https://github.com/WalletConnect/cerberus.git", tag = "v0.9.0" }

# O11y
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
metrics = "0.21"
axum-prometheus = "0.6.1"

# Serialisation
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.0"
parquet = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "99a1cc3", default-features = false, features = ["flate2"]  }
parquet_derive = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "99a1cc3" }

# Misc
arrayvec = { version = "0.7", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
build-info = ">=0.0.30"
derive_more = "0.99"
envy = "0.4"
futures = "0.3"
log = "0.4"
thiserror = "1.0"
tap = "1.0"

[build-dependencies]
build-info-build = ">=0.0.30"
